--- a/package.json
+++ b/package.json
@@ -1,31 +1,50 @@
 {
-  "name": "DataPicker",
+  "name": "myStoryBook",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.tsx",
   "scripts": {
-    "dev": "webpack-dev-server --mode development --env.development --open --hot --progress",
-    "build": "webpack --mode production --env.production --progress",
-    "storybook'": "start-storybook -p 9001 -c .storybook"
+    "dev": "webpack-dev-server --open --config webpack.dev.ts",
+    "build": "webpack --mode production --config webpack.prod.ts",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook",
+    "test": "jest",
+    "chromatic": "chromatic"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "@babel/polyfill": "^7.10.4",
+    "core-js": "^3.6.5",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts-scss-ts": "^2.17.1",
+    "react-superagent": "^1.1.1"
+  },
   "devDependencies": {
-    "@types/node": "^14.11.2",
-    "@types/react": "^16.9.49",
+    "@babel/core": "^7.10.5",
+    "@babel/preset-env": "^7.10.4",
+    "@storybook/addon-actions": "^6.0.16",
+    "@storybook/addon-essentials": "^6.0.16",
+    "@storybook/addon-links": "^6.0.16",
+    "@storybook/react": "^6.0.16",
+    "@types/html-webpack-plugin": "^3.2.3",
+    "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
-    "@types/webpack": "^4.41.22",
-    "@types/webpack-dev-server": "^3.11.0",
-    "ts-node": "^9.0.0",
-    "tsconfig-paths-webpack-plugin": "^3.3.0",
-    "typescript": "^4.0.3",
-    "webpack": "^4.44.2",
+    "@types/superagent": "^4.1.8",
+    "@types/webpack": "^4.41.21",
+    "awesome-typescript-loader": "^5.2.1",
+    "babel-loader": "^8.1.0",
+    "chromatic": "^5.1.0",
+    "dotenv-webpack": "^2.0.0",
+    "html-webpack-plugin": "^4.3.0",
+    "jest": "^26.4.2",
+    "react-is": "^16.13.1",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.6",
+    "webpack": "^4.44.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
-  },
-  "dependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
   }
 }
