Resolve webpack and storybook config

--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "build": "webpack --mode production --config webpack.prod.ts",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "test": "jest"
+    "test": "jest",
+    "chromatic": "chromatic"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/polyfill": "^7.10.4",
+    "@babel/polyfill": "^7.11.5",
     "core-js": "^3.6.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -22,27 +23,30 @@
     "react-superagent": "^1.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.5",
-    "@babel/preset-env": "^7.10.4",
-    "@storybook/addon-actions": "^6.0.16",
-    "@storybook/addon-essentials": "^6.0.16",
-    "@storybook/addon-links": "^6.0.16",
-    "@storybook/react": "^6.0.16",
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
+    "@storybook/addon-actions": "^6.0.22",
+    "@storybook/addon-essentials": "^6.0.22",
+    "@storybook/addon-links": "^6.0.22",
+    "@storybook/react": "^6.0.22",
     "@types/html-webpack-plugin": "^3.2.3",
-    "@types/react": "^16.9.43",
+    "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
-    "@types/superagent": "^4.1.8",
-    "@types/webpack": "^4.41.21",
+    "@types/superagent": "^4.1.10",
+    "@types/webpack": "^4.41.22",
+    "@types/webpack-env": "^1.15.3",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.1.0",
-    "chromatic": "^5.1.0",
-    "html-webpack-plugin": "^4.3.0",
+    "chromatic": "^5.2.0",
+    "dotenv-webpack": "^2.0.0",
+    "html-webpack-plugin": "^4.5.0",
     "jest": "^26.4.2",
     "react-is": "^16.13.1",
     "ts-node": "^8.10.2",
-    "typescript": "^3.9.6",
-    "webpack": "^4.44.0",
+    "typescript": "^3.9.7",
+    "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "webpack-env": "^0.8.0"
   }
 }
