--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "core-js": "^3.6.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-modern-calendar-datepicker": "^3.1.6",
     "react-scripts-scss-ts": "^2.17.1",
     "react-superagent": "^1.1.1"
   },
